--- a/scripts/playbook/roles/nginx/templates/nginx.conf.j2
+++ b/scripts/playbook/roles/nginx/templates/nginx.conf.j2
@@ -19,7 +19,7 @@ http {
                 '"status": $status, '
                 '"request": "$request", '
                 '"http_referrer": "$http_referer", '
-                '"http_user_agent": "$http_user_agent"'
+                '"http_user_agent": "$http_user_agent", '
                 '"upstream_response_time": $upstream_response_time}';
 
   access_log  /var/log/nginx/access.log  main;
@@ -34,6 +34,7 @@ http {
 
   upstream app {
     server 127.0.0.1:8080;
+    # server unix:/var/run/app.sock;
   }
 
   server {
